--- a/style.css
+++ b/style.css
@@ -406,7 +406,26 @@ h2 {
 .portailbattant {
   text-align: center;
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 30px;
+  background-color: #008eb6;
+}
+
+.texteportail {
+  font-size: 20px;
+  margin-top: 10px;
+  background-color: rgba(22, 22, 22, 0.7);
+  box-shadow: 0px 5px 10px 5px rgba(22, 22, 22, 0.7);
+}
+
+.séparation {
+  margin-top: 20px;
+  width: 360px;
+  margin-bottom: 20px;
+}
+
+.Séparation {
+  display: flex;
+  justify-content: center;
 }
 
 .vidéocomp2 {
