--- a/sass/libs/responsive.scss
+++ b/sass/libs/responsive.scss
@@ -1,1 +1,3 @@
 $large-up: "screen and (min-width: 1025px)";
+$medium-down: "screen and (min-width: 415px) and (max-width: 800px)";
+$medium-up: "screen and (min-width: 801px) and (max-width: 1024px)";
