--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
   background-attachment: fixed;
   font-family: "Font global";
   display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -426,6 +427,26 @@ h2 {
   margin-top: 140px;
 }
 
+/* Tablette */
+@media screen and (min-width: 415px) and (max-width: 800px) {
+  .mediacarousel1 {
+    display: flex;
+    justify-content: center;
+  }
+
+  .textemedia1 {
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    /*Soucis de width à voir avec Patrick*/
+  }
+}
+@media screen and (min-width: 801px) and (max-width: 1024px) {
+  .mediacarousel1 {
+    display: flex;
+    justify-content: flex-start;
+  }
+}
 /* Desktop */
 @media screen and (min-width: 1025px) {
   .header li {
