--- a/style.css
+++ b/style.css
@@ -261,12 +261,9 @@ h2 {
 }
 
 .container {
-  display: flex;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding-top: 75px;
-  flex-direction: column;
+  width: 100%;
+  padding: 75px 10px 0 10px;
+  margin: 0 auto 0 auto;
 }
 
 .carousel {
@@ -400,14 +397,14 @@ h2 {
 
 .portailbattant {
   text-align: center;
-  margin-top: 10px;
+  margin: 10px 0 0 0;
   font-size: 30px;
   background-color: #008eb6;
 }
 
 .texteportail {
   font-size: 20px;
-  margin-top: 10px;
+  margin: 10px 0 0 0;
   background-color: rgba(22, 22, 22, 0.7);
   box-shadow: 0px 5px 10px 5px rgba(22, 22, 22, 0.7);
 }
@@ -429,22 +426,38 @@ h2 {
 
 /* Tablette */
 @media screen and (min-width: 415px) and (max-width: 800px) {
-  .mediacarousel1 {
-    display: flex;
-    justify-content: center;
+  .carousel {
+    margin: 0 auto 0 auto;
   }
 
   .textemedia1 {
     text-align: center;
     flex-direction: column;
     justify-content: center;
-    /*Soucis de width à voir avec Patrick*/
+    width: 394px;
+    margin: 0 auto 0 auto;
   }
 }
 @media screen and (min-width: 801px) and (max-width: 1024px) {
-  .mediacarousel1 {
+  .container {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row;
+    width: 100%;
+    padding: 0 10px 0 10px;
+    margin: 75px 0 0 0;
+  }
+
+  .carousel {
+    padding: 0 10px 0 0;
+  }
+
+  .textemedia1 {
+    text-align: left;
+    margin: 0 0 0 10px;
+  }
+
+  .portailbattant {
+    margin: 0 0 0 0;
   }
 }
 /* Desktop */
@@ -469,6 +482,27 @@ h2 {
 
   .header li a {
     border-left: 1px solid ghostwhite;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 0 10px 0 10px;
+    margin: 75px 0 0 0;
+  }
+
+  .carousel {
+    padding: 0 10px 0 0;
+  }
+
+  .textemedia1 {
+    text-align: left;
+    margin: 0 0 0 10px;
+  }
+
+  .portailbattant {
+    margin: 0 0 0 0;
   }
 }
 
