--- a/sass/style.scss
+++ b/sass/style.scss
@@ -484,7 +484,7 @@ h2{
   }
   .carousel {
     padding: 0 10px 0 0;
-    
+    margin: 0 auto 0 auto;
   }
   .textemedia1 {
     text-align: left;
@@ -497,6 +497,7 @@ h2{
 }
 /* Desktop */
 @media #{$large-up} {
+  /* menu */
   .header li {
       float: left;
   }
@@ -514,17 +515,25 @@ h2{
   .header li a {
       border-left: 1px solid ghostwhite;
   }
+  /*carousel */
   .container {
     display: flex;
     flex-direction: row;
     width: 100%;
-    padding: 0 10px 0 10px;
+    padding: 0 15% 0 15%;
     margin: 75px 0 0 0; 
   }
   .carousel {
     padding: 0 10px 0 0;
-    
+    margin: 0 auto 0 auto;
+    width: 500px;
+      &__item {
+        img {
+          width: 500px;
+        }
+      }
   }
+  
   .textemedia1 {
     text-align: left;
     margin: 0 0 0 10px;
