--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -443,6 +443,7 @@ h2{
     background-color: #008eb6;
 }
 .texteportail {
+    text-align: left;
     font-size: 20px;
     margin: 10px 0 0 0;
     background-color: rgb(22, 22, 22, 0.7);
@@ -466,7 +467,7 @@ h2{
     margin: 0 auto 0 auto;
   }
   .textemedia1 {
-    text-align: center;
+    text-align: left;
     flex-direction: column;
     justify-content: center;
     width: 394px;
@@ -479,7 +480,7 @@ h2{
     display: flex;
     flex-direction: row;
     width: 100%;
-    padding: 0 10px 0 10px;
+    padding: 0 10% 0 10%;
     margin: 75px 0 0 0; 
   }
   .carousel {
@@ -522,7 +523,7 @@ h2{
     display: flex;
     flex-direction: row;
     width: 100%;
-    padding: 0 15% 0 15%;
+    padding: 0 10% 0 10%;
     margin: 75px 0 0 0; 
   }
   .carousel {
