--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -223,8 +223,9 @@ h2{
     font-size: 12px;
 }
 
-/**
- * Carousel.sass */
+
+ /* Carousel */
+
  %animation-default {
   opacity: 1 !important;
   z-index: 2;
@@ -448,7 +449,8 @@ h2{
     margin: 10px 0 0 0;
     background-color: rgb(22, 22, 22, 0.7);
     box-shadow: 0px 5px 10px 5px rgb(22, 22, 22, 0.7);
-}  
+} 
+/* Séparation */ 
 .séparation {
   margin-top: 20px;
   width: 360px;
@@ -458,10 +460,8 @@ h2{
   display: flex;
   justify-content: center;
 }  
-.vidéocomp2 {
-  margin-top: 140px;
-}
-/* Tablette */
+
+/* petite Tablette */
 @media #{$medium-down} {
   .carousel {
     margin: 0 auto 0 auto;
@@ -475,6 +475,7 @@ h2{
   }
   
 }
+/* grande tablette */
 @media #{$medium-up} {
   .container {
     display: flex;
