--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -149,9 +149,9 @@ a {
 
 /* Footer */
 .multimédia {
-  height: 40px;
+  height: 50px;
   width: 40px;
-  
+  padding-top: 10px;
 }
 footer{
   background:rgb(5,5,5);
@@ -161,7 +161,7 @@ footer{
   bottom: 0; 
   width: 100%;  
   justify-content: center;
-  height: 50px;
+  height: 60px;
   display: flex;
   }
 /* Sécurité ~&~ Contrôle */
