--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,9 @@ a {
 
 /* Footer */
 .multimédia {
-  height: 40px;
+  height: 50px;
   width: 40px;
+  padding-top: 10px;
 }
 
 footer {
@@ -167,7 +168,7 @@ footer {
   bottom: 0;
   width: 100%;
   justify-content: center;
-  height: 50px;
+  height: 60px;
   display: flex;
 }
 
