--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -62,7 +62,7 @@ a {
   
 .header li a:hover,
 .header .menu-btn:hover {
-    background-color:rgb(22, 22, 22);
+    background-color:#008eb6;
 }
   
 .header .logo {
@@ -231,7 +231,7 @@ input[type=submit] {
     padding-top: 85px;
     margin-left: 18px;
     font-size: 20px;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
 }
 h2{
     color: ghostwhite;
@@ -525,6 +525,7 @@ h2{
   .header li a {
       padding: 20px 30px;
   }
+  
   .header .menu {
       clear: none;
       float: right;
