--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ a {
 
 .header li a:hover,
 .header .menu-btn:hover {
-  background-color: #161616;
+  background-color: #008eb6;
 }
 
 .header .logo {
@@ -239,7 +239,7 @@ input[type=submit] {
   padding-top: 85px;
   margin-left: 18px;
   font-size: 20px;
-  padding-bottom: 60px;
+  padding-bottom: 80px;
 }
 
 h2 {
