--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -157,7 +157,7 @@ footer{
   background:rgb(5,5,5);
   border-bottom: 1px solid #008eb6;
   border-top: 1px solid #008eb6;
-  position: absolute;
+  position: fixed;
   bottom: 0; 
   width: 100%;  
   justify-content: center;
@@ -231,7 +231,6 @@ input[type=submit] {
     padding-top: 85px;
     margin-left: 18px;
     font-size: 20px;
-    padding-bottom: 80px;
 }
 h2{
     color: ghostwhite;
